# INFO-H502---Wizard3D

./: .gitignore  CMakeLists.txt  DynamicObject.cpp  DynamicObject.h  README.md  object.cpp  object.h  scene.cpp  scene.h  texture.cpp  texture.h
src/: PhysicsUtils.h  camera.h  main.cpp  object.cpp  object.h  shader.cpp  shader.h
src/engine/: camera.h  entity.h  object.h  particule.cpp  particule.h  scene.cpp  scene.h  shader.h  texture.cpp  texture.h
src/shaders/: envmap.frag  envmap.vert  ice.frag  ice.vert  light.frag  light.vert  lighting.frag  lighting.vert  particles.frag  particles.vert  skybox.frag  skybox.vert  ui.frag  ui.vert
